# what-movie

./: .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
what-movie-server/: .flake8  Dockerfile  entrypoint.sh  pyproject.toml
what-movie-server/tests/: test_auth.py  test_config.py  test_movies.py  test_user_model.py
what-movie-server/tests/integration/: base.py  helpers.py  test_auth.py  test_cinemas.py  test_favourites.py  test_movies.py  test_user_model.py  test_users.py
what-movie-server/tests/unit/: test_config.py
what-movie-server/what_movie_server/: .env.example  app.py  commands.py  config.py
what-movie-server/what_movie_server/migrations/versions/: 937cfaa36333_.py
what-movie-server/what_movie_server/models/: BlacklistToken.py  Favourites.py  Movies.py  User.py  __init__.py
what-movie-server/what_movie_server/models/pydantic/movies/request/: MoviesGetRequest.py
what-movie-server/what_movie_server/models/sqlalchemy/: Favourites.py  User.py
what-movie-server/what_movie_server/routes/: __init__.py  auth.py  cinemas.py  data.py  decorators.py  favourites.py  helpers.py  movies.py  users.py
what-movie-server/what_movie_server/schemas/: __init__.py
what-movie-server/what_movie_server/schemas/auth/common/response/: AuthSuccessPostResponse.py
what-movie-server/what_movie_server/schemas/auth/error/response/: AuthErrorResponse.py
what-movie-server/what_movie_server/schemas/auth/getstatus/response/: Data.py
what-movie-server/what_movie_server/schemas/auth/register/response/: RegisterSuccessPostResponse.py
(+98 files in other folders)
